Explicitly allow dynamic agent loading